fixed some spacing of the language modal and added an overlay so the white on white isnt terrible

--- a/frontend/client/src/App.css
+++ b/frontend/client/src/App.css
@@ -103,14 +103,26 @@
 /* ==== Translation Coming Soon Modal ==== */
 .spanishModal {
   position: fixed;
-  top: 10%;
-  left: 25%;
+  /* top: 10%;
+  left: 25%; */
+  top: 25%;
+  left: 42%;
   width: 300px;
   height: 200px;
   background-color: white;
   z-index: 1;
   border-radius: 5px;
   box-shadow: 1px 1px 4px 2px #00000050;
+}
+
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #656176;
+  opacity: .5;
 }
 
 .modal-language {
@@ -337,6 +349,8 @@
   color: #9b9b9b;
 }
 
+
+
 /* ==== Tablet Styles ==== */
 
 @media (max-width: 1024px) {
@@ -358,6 +372,61 @@
     letter-spacing: 1px;
     font-size: 1rem;
   }
+
+  .spanishModal {
+    position: fixed;
+    /* top: 10%;
+    left: 25%; */
+    top: 25%;
+    left: 30%;
+    width: 300px;
+    height: 200px;
+    background-color: white;
+    z-index: 1;
+    border-radius: 5px;
+    box-shadow: 1px 1px 4px 2px #00000050;
+  }
+  
+  /* .modal-language {
+    color: #4a4a4a;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    border-radius: 100px;
+    padding: 20px 10px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  }
+  
+  .modal-language h2 {
+    font-size: 1.6rem;
+    width: 90%;
+    margin-left: 5%;
+    margin-bottom: 5%;
+  }
+  
+  .modal-language h4 {
+    font-size: 1.4rem;
+    width: 90%;
+    margin-left: 5%;
+    font-style: italic;
+  }
+  
+  .modal-language .closeModalButton {
+    position: relative;
+    width: 10%;
+    font-size: 1.6rem;
+    font-weight: bold;
+    color: #4a4a4a;
+    top: 0;
+    right: 0;
+    margin-left: 45%;
+    margin-top: 15px;
+    cursor: pointer;
+  } */
+
 }
 /* ==== Upright Tablet ==== */
 @media (max-width: 800px) {
@@ -423,6 +492,20 @@
   .subscript {
     margin: 0 auto;
     padding: 10px 2%;
+  }
+
+  .spanishModal {
+    position: fixed;
+    /* top: 10%;
+    left: 25%; */
+    top: 25%;
+    left: 13%;
+    width: 300px;
+    height: 200px;
+    background-color: white;
+    z-index: 1;
+    border-radius: 5px;
+    box-shadow: 1px 1px 4px 2px #00000050;
   }
 }
 
